# fluorite

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  arm_decode_notes.txt  build.rs
.github/workflows/: rust.yml
benches/: performance.rs
fluorite-arm/: Cargo.toml  build.rs
fluorite-arm/src/: alu.rs  cpu.rs  disassembler.rs  exception.rs  instr_arm.rs  lib.rs  memory.rs  registers.rs
fluorite-arm/src/arm/: disassembly.rs  exec.rs  mod.rs
fluorite-arm/src/thumb/: dissasembly.rs  exec.rs  mod.rs
fluorite-arm/tests/: thumb_decode.rs
fluorite-common/: Cargo.toml
fluorite-common/macros/: Cargo.toml
fluorite-common/macros/src/: helpers.rs  kw.rs  lib.rs
fluorite-common/src/: bits.rs  buffer.rs  cell.rs  lib.rs  ptr.rs  ram.rs  register.rs  shared.rs  traits.rs
fluorite-common/src/mem/: containers.rs  mod.rs  traits.rs
fluorite-frontend/: Cargo.toml  build.rs
fluorite-frontend/src/: audio_ctx.rs  config.rs  counter.rs  limiter.rs  main.rs  video_ctx.rs
fluorite-frontend/src/application/: mod.rs  render.rs
fluorite-gba/: Cargo.toml  build.rs
fluorite-gba/benches/: fps.rs
fluorite-gba/src/: bios.rs  cartridge.rs  consts.rs  dma.rs  gba.rs  gpu.rs  interrupt.rs  iodev.rs  keypad.rs  lib.rs  rtc.rs  sched.rs  sound.rs  sysbus.rs  timer.rs
fluorite-gba/src/arm/: arm.rs  mod.rs  registers.rs
fluorite-gba/src/gamepak/: mod.rs  rom.rs
fluorite-gba/src/gpu/: obj.rs  render.rs  window.rs
fluorite-gba/src/io/: memory.rs  mod.rs  scheduler.rs
fluorite-gba/src/io/apu/: mod.rs  registers.rs
fluorite-gba/src/io/apu/channel/: components.rs  dma_sound.rs  mod.rs  noise.rs  tone.rs  wave.rs
fluorite-gba/src/io/dma/: mod.rs  registers.rs
fluorite-gba/src/io/gamepak/: mod.rs  rom.rs
fluorite-gba/src/io/gamepak/gpio/: mod.rs  rtc.rs
fluorite-gba/src/io/gamepak/save/: flash.rs  mod.rs  sram.rs
fluorite-gba/src/io/gpu/: debug.rs  mod.rs  registers.rs
fluorite-gba/src/io/interrupt_controller/: mod.rs  registers.rs
fluorite-gba/src/io/keypad/: mod.rs
fluorite-gba/src/io/timers/: mod.rs  registers.rs
roms/: beeg-1.asm  enbyrights.gba  rtc-demo.gba  yoshi_dma.gba
src/: bios.rs  cartridge.rs  consts.rs  counter.rs  cpu.rs  debug.rs  display.rs  dma.rs  emu.rs  fps.rs  gba.rs  gpu.rs  interrupt.rs  iodev.rs  lib.rs  limiter.rs  main.rs  sched.rs  sysbus.rs  util.rs  utils.rs  video_ctx.rs
src/arm/: arm.rs  mod.rs  registers.rs  thumb.rs
src/armcore/: mod.rs  registers.rs
src/armcore/thumb/: exec.rs  mod.rs
src/gpu/: render.rs  window.rs
src/io/: memory.rs  mod.rs  scheduler.rs
src/io/dma/: mod.rs  registers.rs
src/io/gpu/: debug.rs  mod.rs  registers.rs
src/io/interrupt_controller/: mod.rs  registers.rs
src/io/keypad/: mod.rs
src/io/timers/: mod.rs
src/utils/: mod.rs
