[package]
name = "fluorite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluorite-common = { path = "fluorite-common" }
fluorite-arm = { path = "fluorite-arm" }

color-eyre = "0.5.11"
modular-bitfield = "0.11"
static_assertions = "1.1"
minifb = "0.19.3"
bitfield = "0.13.2"
arrayvec = "0.5.2"
bitflags = "1.3.2"

[build-dependencies]
fluorite-common = { path = "fluorite-common" }

[workspace]
members = [
	"fluorite-common",
	"fluorite-arm"
]
