[package]
name = "fluorite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluorite-common = { path = "fluorite-common" }
fluorite-arm = { path = "fluorite-arm" }
fluorite-gba = { path = "fluorite-gba" }

color-eyre = "0.5.11"
# raylib = "3.7.0"
raylib = { path = "../../Desktop/raylib" }
simple_logger="2.1.0"

[dev-dependencies]
criterion = "0.3"

[workspace]
members = [
	"fluorite-common",
	"fluorite-arm",
	"fluorite-gba"
]

[[bench]]
name = "performance"
harness = false


[profile.dev]
overflow-checks = false

[profile.release]
lto = true
codegen-units = 1

# [patch.crates-io]
# raylib = { path = "raylib-rs/raylib" }