[package]
name = "fluorite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
simple_logger="2.1.0"
imgui = "0.8.2"
imgui-opengl-renderer = "0.11.1"
gl = "0.14.0"
glfw = "0.44.0"
flume = "0.10.12"
bitflags = "1.3.2"
num = "0.4.0"
priority-queue = "1.2.1"

yaxpeax-arm = { version = "0.2.3", optional = true }
yaxpeax-arch = { version = "0.2.7", optional = true }
spin_sleep = "1.1.0"

[features]
default = []
decode = ["yaxpeax-arm", "yaxpeax-arch"]

[profile.dev]
overflow-checks = false

[profile.release]
lto = true
codegen-units = 1
