[package]
name = "fluorite-arm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield = "0.11"
static_assertions = "1.1"
enum-primitive-derive = "0.2"
num-traits = "0.2"
byteorder = "1.4"

fluorite-common = { path = "../fluorite-common" }