[package]
name = "fluorite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluorite-gba = { path = "../fluorite-gba" }

color-eyre = "0.6.1"
simple_logger="2.1.0"
sdl2 = "0.34.5"
glow = "0.10.0"
imgui = {git="https://github.com/imgui-rs/imgui-rs.git"}
imgui-sdl2-support = {git="https://github.com/imgui-rs/imgui-rs.git"}
imgui-glow-renderer = {git="https://github.com/imgui-rs/imgui-rs.git"}
spin_sleep = "1.1.0"
rfd = "0.8.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"