[package]
name = "fluorite-gba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluorite-common = { path = "../fluorite-common" }
fluorite-arm = { path = "../fluorite-arm" }
bitflags = "1.3.2"
num-traits = "0.2.14"
priority-queue = "1.2.1"
log = "0.4.16"