[package]
name = "fluorite-gba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluorite-common = { path = "../fluorite-common" }

num-traits = "0.2.14"
priority-queue = "1.2.1"
log = "0.4.16"
enum_dispatch = "0.3.8"
chrono = "0.4.19"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "fps"
harness = false